Added UploadImage view

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,7 +18,7 @@
         android:layout_gravity="center"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:onClick="toCamera"
+        android:onClick="toCameraActivity"
         android:background="@drawable/button"
         android:textColor="#ffd3ffe5"
         android:textStyle="bold" />
