--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,14 +11,13 @@
     tools:context="alekh.imdel.MainActivity">
 
     <Button
-        android:id="@+id/button_to_camera"
+        android:id="@+id/to_camera_button"
         android:text="Take picture"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:onClick="toCameraActivity"
         android:background="@drawable/button"
         android:textColor="#ffd3ffe5"
         android:textStyle="bold" />
