--- a/app/src/main/res/layout/activity_upload.xml
+++ b/app/src/main/res/layout/activity_upload.xml
@@ -13,7 +13,7 @@
     <ImageView
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:id="@+id/capturedImage"
+        android:id="@+id/captured_view"
         android:layout_above="@+id/addText" />
 
     <EditText
