--- a/app/src/main/res/layout/activity_upload.xml
+++ b/app/src/main/res/layout/activity_upload.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_upload_image"
     android:layout_width="match_parent"
@@ -11,47 +12,46 @@
     tools:context="alekh.imdel.UploadActivity" >
 
     <ImageView
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:id="@+id/captured_view"
-        android:layout_above="@+id/add_text" />
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:id="@+id/captured_view" />
 
     <EditText
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
         android:id="@+id/add_text"
         android:inputType="textMultiLine|textNoSuggestions"
-        android:layout_marginBottom="55dp"
         android:layout_alignParentBottom="true"
+        android:maxLength="200"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginLeft="11dp"
-        android:layout_marginStart="11dp"
-        android:maxLength="200" />
+        android:layout_alignParentStart="true" />
 
     <Button
-        android:text="Publish"
+        android:text="@string/publish_button"
+        android:id="@+id/publish_button"
+        android:background="@android:color/transparent"
+        android:textColor="@color/grey"
+        android:textStyle="bold"
+        android:textSize="30sp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/publish_button"
-        android:background="@drawable/button"
-        android:textColor="#ffd3ffe5"
-        android:textStyle="bold"
-        android:layout_alignParentBottom="true"
+        android:layout_alignParentTop="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true" />
 
     <Button
-        android:text="Cancel"
+        android:text="@string/cancel_button"
+        android:id="@+id/cancel_button"
+        android:background="@android:color/transparent"
+        android:textColor="@color/grey"
+        android:textStyle="bold"
+        android:textSize="30sp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/cancel_button"
-        android:background="@drawable/button"
-        android:textColor="#ffd3ffe5"
-        android:textStyle="bold"
-        android:layout_alignParentBottom="true"
+        android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
-
 </RelativeLayout>
