thumbnails scale with device

--- a/app/src/main/res/layout/picture_item.xml
+++ b/app/src/main/res/layout/picture_item.xml
@@ -8,6 +8,9 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/thumbnail"
-        android:layout_weight="1" />
+        android:layout_weight="1"
+        android:adjustViewBounds="true"
+        android:scaleType="fitXY"
+        android:padding="2dp" />
 
 </LinearLayout>
