--- a/app/src/main/res/layout/activity_camera.xml
+++ b/app/src/main/res/layout/activity_camera.xml
@@ -4,10 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="alekh.imdel.CameraActivity">
 
     <Button
@@ -19,7 +15,8 @@
         android:layout_centerHorizontal="true"
         android:background="@drawable/button"
         android:textColor="#ffd3ffe5"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        android:textSize="30sp" />
 
     <FrameLayout
         android:layout_width="match_parent"
@@ -35,7 +32,7 @@
             android:id="@+id/camera_switch_button"
             android:textColor="@color/grey"
             android:layout_gravity="top|right"
-            android:textSize="30sp"/>
+            android:textSize="30sp" />
 
     </FrameLayout>
 
