--- a/app/src/main/res/layout/activity_show_picture.xml
+++ b/app/src/main/res/layout/activity_show_picture.xml
@@ -1,21 +1,61 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_show_picture"
+    android:id="@+id/activity_upload_image"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="alekh.imdel.ShowPictureActivity">
+    tools:context="alekh.imdel.UploadActivity" >
+
+    <Button
+        android:text="@string/upvote_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:id="@+id/upvote_button"
+        android:background="@drawable/button"
+        android:textColor="#ffd3ffe5"
+        android:textStyle="bold"
+        android:textSize="30sp"/>
+
+    <Button
+        android:text="@string/downvote_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/upvote_button"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:id="@+id/downvote_button"
+        android:background="@drawable/button"
+        android:textColor="#ffd3ffe5"
+        android:textStyle="bold"
+        android:textSize="30sp" />
 
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_alignParentTop="true"
+        android:id="@+id/picture_view"
+        android:layout_below="@+id/upvote_button"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:id="@+id/picture_view" />
+        android:layout_alignParentStart="true" />
+
+    <TextView
+        android:text="TODO: votes display"
+        android:gravity="center"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:id="@+id/vote_count_view"
+        android:layout_toRightOf="@+id/upvote_button"
+        android:layout_toEndOf="@id/upvote_button"
+        android:layout_toLeftOf="@+id/downvote_button"
+        android:layout_toStartOf="@+id/downvote_button"
+        android:layout_alignBottom="@+id/upvote_button"
+        android:background="@drawable/button"
+        android:textColor="#ffd3ffe5"
+        android:textStyle="bold" />
+
+
 </RelativeLayout>
