--- a/app/src/main/res/layout/activity_upload.xml
+++ b/app/src/main/res/layout/activity_upload.xml
@@ -1,14 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_upload_image"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="alekh.imdel.UploadActivity" >
 
     <ImageView
@@ -16,7 +11,8 @@
         android:layout_height="match_parent"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:id="@+id/captured_view" />
+        android:id="@+id/captured_view"
+        android:layout_below="@+id/publish_button" />
 
     <EditText
         android:layout_width="match_parent"
@@ -24,15 +20,28 @@
         android:ems="10"
         android:id="@+id/add_text"
         android:inputType="textMultiLine|textNoSuggestions"
-        android:layout_alignParentBottom="true"
         android:maxLength="200"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <Button
+        android:text="@string/cancel_button"
+        android:id="@+id/cancel_button"
+        android:background="@drawable/button"
+        android:textColor="@color/grey"
+        android:textStyle="bold"
+        android:textSize="30sp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
     <Button
         android:text="@string/publish_button"
         android:id="@+id/publish_button"
-        android:background="@android:color/transparent"
+        android:background="@drawable/button"
         android:textColor="@color/grey"
         android:textStyle="bold"
         android:textSize="30sp"
@@ -42,16 +51,15 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true" />
 
-    <Button
-        android:text="@string/cancel_button"
-        android:id="@+id/cancel_button"
-        android:background="@android:color/transparent"
-        android:textColor="@color/grey"
-        android:textStyle="bold"
-        android:textSize="30sp"
-        android:layout_width="wrap_content"
+    <TextView
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:id="@+id/emptyTextView"
+        android:layout_above="@+id/captured_view"
+        android:layout_toLeftOf="@+id/publish_button"
+        android:layout_toStartOf="@id/publish_button"
+        android:layout_toRightOf="@+id/cancel_button"
+        android:layout_toEndOf="@+id/cancel_button"
+        android:background="@color/colorPrimary" />
 </RelativeLayout>
